# test-oidc-provider

./: .description.md  .pre-commit-config.yaml  Dockerfile  README.md  config_schema.json  example_config.yaml  openapi.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg
.devcontainer/: .dev_config.yaml  dev_launcher  devcontainer.json  docker-compose.yml
.github/workflows/: ci_workflow_dispatch.yaml
.pyproject_generation/: pyproject_custom.toml
lock/: requirements-dev.txt  requirements.txt
scripts/: update_config_docs.py
scripts/script_utils/: fastapi_app_location.py
src/top/: __init__.py  __main__.py  config.py
src/top/api/: __init__.py  deps.py  main.py
src/top/core/: __init__.py  http_utils.py  models.py  oidc_provider.py
tests/: __init__.py  test_api.py  test_config.py  test_core.py  test_oidc_provider.py
tests/fixtures/: __init__.py  utils.py
top/: __init__.py  __main__.py  config.py
top/api/: main.py
top/core/: __init__.py  models.py  oidc_provider.py
